--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/syne": "^5.0.18",
+    "@types/smooth-scroll": "^16.1.4",
     "astro": "^4.2.3",
+    "smooth-scroll": "^16.1.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
