--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/syne": "^5.0.18",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@types/smooth-scroll": "^16.1.4",
     "astro": "^4.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-final-marquee": "^1.0.3",
+    "react-icons": "^5.0.1",
     "smooth-scroll": "^16.1.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "postcss-nesting": "^12.0.2"
   }
 }
