--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/syne": "^5.0.18",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/smooth-scroll": "^16.1.4",
     "astro": "^4.2.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-final-marquee": "^1.0.3",
