--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/smooth-scroll": "^16.1.4",
     "astro": "^4.11.0",
     "js-cookie": "^3.0.5",
+    "photoswipe": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-final-marquee": "^1.0.4",
