--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-final-marquee": "^1.0.4",
     "react-icons": "^5.2.1",
     "smooth-scroll": "^16.1.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
