--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "npx oxlint@latest"
+    "lint": "npx oxlint@latest",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -22,8 +24,12 @@
     "@types/react-dom": "^18.3.0",
     "@types/smooth-scroll": "^16.1.4",
     "astro": "^4.11.0",
+    "eslint-config-prettier": "^10.0.1",
     "js-cookie": "^3.0.5",
     "photoswipe": "^5.4.4",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-final-marquee": "^1.0.4",
