--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^19.0.3",
     "@types/smooth-scroll": "^16.1.4",
     "astro": "^5.1.10",
+    "astro-seo": "^0.8.4",
     "eslint-config-prettier": "^10.0.1",
     "js-cookie": "^3.0.5",
     "photoswipe": "^5.4.4",
